--- a/adaptMCMC/DESCRIPTION
+++ b/adaptMCMC/DESCRIPTION
@@ -11,4 +11,6 @@ Description: This package provides an implementation of the generic adaptive Mon
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.14.1), parallel, coda, Matrix
+URL: https://github.com/scheidan/adaptMCMC
+BugReports: https://github.com/scheidan/adaptMCMC/issues
 RoxygenNote: 6.0.1
