--- a/adaptMCMC/DESCRIPTION
+++ b/adaptMCMC/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.2
 Date: 2017-06-21
 Author: Andreas Scheidegger, <andreas.scheidegger@eawag.ch>, <scheidegger.a@gmail.com>
 Maintainer: Andreas Scheidegger <andreas.scheidegger@eawag.ch>
-Description: Enables sampling from arbitrary distributions if the log density is known up to a constant; a common situation in the context of Bayesian inference. The implemented sampling algorithm proposed by Vihola (2011) achieves often a high efficiency by tuning the proposal distributions to a user defined acceptance rate.
+Description: Enables sampling from arbitrary distributions if the log density is known up to a constant; a common situation in the context of Bayesian inference. The implemented sampling algorithm was proposed by Vihola (2012) <DOI: 10.1007/s11222-011-9269-5> and achieves often a high efficiency by tuning the proposal distributions to a user defined acceptance rate.
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.14.1), parallel, coda, Matrix
