Replaced adaptation step with call to ramcmc::adapt_S
ramcmc added to package Imports.

--- a/adaptMCMC/DESCRIPTION
+++ b/adaptMCMC/DESCRIPTION
@@ -9,6 +9,7 @@ Description: Enables sampling from arbitrary distributions if the log density is
 License: GPL (>= 2)
 LazyLoad: yes
 Depends: R (>= 2.14.1), parallel, coda, Matrix
+Imports: ramcmc
 URL: https://github.com/scheidan/adaptMCMC
 BugReports: https://github.com/scheidan/adaptMCMC/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 7.1.1
